--- a/systemd/get_binancespot_last_trades.service
+++ b/systemd/get_binancespot_last_trades.service
@@ -4,14 +4,14 @@ venv="/home/brenn/environments/venv"
 okxenv="/home/brenn/environments/okx"
 
 [Unit]
-Description=Uvicorn instance for place_binance_order
+Description=Uvicorn instance for get_binancespot_last_trades
 After=network.target
 
 [Service]
 User=brenn
 Group=
 WorkingDirectory=/var/www/html/orderbook
-ExecStart=/home/brenn/environments/okx/bin/uvicorn app.fastapi.binanceperp.rest.private.place_binance_order:app --port 5083 --host 0.0.0.0 --reload
+ExecStart=/home/brenn/environments/okx/bin/uvicorn app.fastapi.binancespot.rest.public.get_binancespot_last_trades:app --port 6104 --host 0.0.0.0 --reload
 Environment="VIRTUAL_ENV=/home/brenn/environments/okx"
 Environment="PATH=$okxenv:$PATH"
 Environment="PYTHONPATH=/var/www/html/orderbook"
