--- a/systemd/get_binance_positions.service
+++ b/systemd/get_binance_positions.service
@@ -11,7 +11,7 @@ After=network.target
 User=brenn
 Group=
 WorkingDirectory=/var/www/html/orderbook
-ExecStart=/home/brenn/environments/okx/bin/uvicorn app.fastapi.binanceperp.rest.private.get_binance_positions:app --port 5073 --host 0.0.0.0 --reload
+ExecStart=/home/brenn/environments/okx/bin/uvicorn app.fastapi.binanceperp.rest.private.get_binance_positions:app --port 5073 --host 0.0.0.0 
 Environment="VIRTUAL_ENV=/home/brenn/environments/okx"
 Environment="PATH=$okxenv:$PATH"
 Environment="PYTHONPATH=/var/www/html/orderbook"
